02 Jan 2007 Fix deconfigure_cpu so power-off diagnoses work - Fish
31 Dec 2006 Fix PR# misc/94 for good this time! (hopefully) - Fish
31 Dec 2006 new 'cd' and 'pwd' commands to go with 'sh' command - Fish
31 Dec 2006 Fix cmdline tabbed filename-completion for MSVC - Fish
30 Dec 2006 Add ability to modify gpr reg values to gpr command - Fish
30 Dec 2006 PR# build_msc/103: fix MSVC diag 8 'sh' capture - Fish
27 Dec 2006 Permanently disable Microsoft's completely INSANE
            Invalid CRT Parameter handling behavior - Fish
27 Dec 2006 PR# tape/100: Fix crash if bad filespec in OMA (TDF) - Fish
23 Dec 2006 Misc dyngui mods (64-bit regs, efficiency, etc) - Fish
23 Dec 2006 Fix integrated 1052/3215 for output with % - Ivan Warren
21 Dec 2006 Fix SIGP to do single logmsg - Greg Smith
21 Dec 2006 Range for s+, t+ - Greg Smith
20 Dec 2006 Fix instruction display in program interrupt - Greg Smith
20 Dec 2006 Clear FPC register during Initial CPU Reset - Roger Bowler
20 Dec 2006 Clear AR,FPR,VR regs during Clear Reset - Roger Bowler
19 Dec 2006 ip_all.pat - performance patch - Greg Smith
19 Dec 2006 Backout mainlockx.pat - possible SMP problmes - Greg Smith
19 Dec 2006 New FPC command to display FPC register - Roger Bowler
17 Dec 2006 Modify FPR command to display FP registers in pairs - Roger Bowler
17 Dec 2006 Display DXC in msg HHCCP014I for PIC7 - Roger Bowler
11 Dec 2006 Set tape blockid to U32 - (by "zazubek") - Ivan Warren
08 Dec 2006 Add model, plant and manufacturer config parameter - Bernard
06 Dec 2006 Include Mike Cowlishaw decNumber package - Roger Bowler
30 Nov 2006 Floating Point Support Enhancement feature - Roger Bowler
29 Nov 2006 Zero out GPRS on IPL Clear and System clear - Ivan Warren
29 Nov 2006 Begin Decimal Floating Point (DFP) framework - Roger Bowler
27 Nov 2006 Remove GNU dependencies from dasdlist - Bjoern A. Zeeb (rbowler)
26 Nov 2006 Move initialization hao before .rc processing - Bernard
22 Nov 2006 Fix aws/het files trailing garbage - Fish