@@ -1,3 +1,4 @@
+03 Jan 2007 Sloppy fetch - Greg Smith
 02 Jan 2007 Fix deconfigure_cpu so power-off diagnoses work - Fish
 31 Dec 2006 Fix PR# misc/94 for good this time! (hopefully) - Fish
 31 Dec 2006 new 'cd' and 'pwd' commands to go with 'sh' command - Fish
